backend/test-output.txt
(node:35040) ExperimentalWarning: SQLite is an experimental feature and might change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
file:///D:/web%E5%BC%80%E5%8F%91/1/webdev-template/backend/src/service/auth.service.ts:16
@Provide()
^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at ModuleLoader.<anonymous> (node:internal/modules/esm/translators:664:10)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:571:36)
    at afterResolve (node:internal/modules/esm/loader:624:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:630:12)
    at ModuleJob.syncLink (node:internal/modules/esm/module_job:143:33)

Node.js v24.13.0
鉁?test\auth.service.test.mts (376.5711ms)
鈩?tests 1
鈩?suites 0
鈩?pass 0
鈩?fail 1
鈩?cancelled 0
鈩?skipped 0
鈩?todo 0
鈩?duration_ms 398.1443

鉁?failing tests:

test at test\auth.service.test.mts:1:1
鉁?test\auth.service.test.mts (376.5711ms)
  'test failed'
